--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -6,8 +6,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>센서값들</title>
-<title>UNC Chart test</title>
+<title>Measurement Values for Sensors</title>
 	<script src="./js/chart.bundle.js"></script>
 	<script src="./js/utils.js"></script>
 	<script>
