--- a/views/chart.ejs
+++ b/views/chart.ejs
@@ -403,7 +403,7 @@
 				options: {
 					title:{
 						display:true,
-						text:'Tile',
+						text:'Tilt',
 						fontSize:24,
 						fontColor: 'rgb(0,0,0)'
 					},scales: {
