--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>안전진단 시스템</title>
 </head>
 <body>
 <form action="/login" method="post" name="frm_login" id="frm_login">
